# RT-FRAME

./: .gitignore  .gitmodules  CLAUDE.md  GIT_ADD_README.md  LICENSE  Makefile  README.md  build.sh
.github/workflows/: cmake-multi-platform.yml  release.yml  self-hosted.yml
boards/nxp/vmu_rt1170/: vmu_rt1170_mimxrt1176_cm4_defconfig  vmu_rt1170_mimxrt1176_cm7.dts  vmu_rt1170_mimxrt1176_cm7_defconfig
cmake/: toolchain.cmake  zephyr.cmake
core/: CMakeLists.txt
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/rules/: progressive-migration.md
docs/rules/plans/: SUMMARY.md  mavlink_zephyr_adaptation.md  sd-filesystem-shell.md
drivers/: CMakeLists.txt
lib/: CMakeLists.txt
modules/: CMakeLists.txt
msg/: CMakeLists.txt
src/: CMakeLists.txt  Kconfig  main.cpp
src/core/: CMakeLists.txt  Kconfig  dm_sync.h  rtframe_core.cpp  sd_sync.h  vwork_config.h
src/drivers/: CMakeLists.txt  Kconfig
src/drivers/usb/: CMakeLists.txt  Kconfig  usb_cdc.c
src/include/: defines.h  module.h  module_params.h  pthread_compat.h  px4_config.h  px4_custom_mode.h  px4_posix.h  px4_time.h  sem.h
src/include/param/: param.h
src/include/structs/: AtomicBitset.hpp  LockGuard.hpp
src/include/sys/: termios.h
src/lib/: CMakeLists.txt  Kconfig
src/lib/adsb/: AdsbConflict.cpp  AdsbConflict.h  CMakeLists.txt  Kconfig
src/lib/airspeed/: CMakeLists.txt  Kconfig  airspeed.cpp  airspeed.h
src/lib/atmosphere/: CMakeLists.txt  Kconfig
src/lib/circuit_breaker/: CMakeLists.txt  Kconfig  circuit_breaker.cpp  circuit_breaker.h
src/lib/console_buffer/: CMakeLists.txt  Kconfig  console_buffer.cpp  console_buffer.h
src/lib/conversion/: CMakeLists.txt  Kconfig  rotation.h
src/lib/crc/: CMakeLists.txt  Kconfig  crc.c
src/lib/dataman/: dataman.h
src/lib/dataman_client/: CMakeLists.txt  Kconfig
src/lib/geo/: CMakeLists.txt  Kconfig  geo.h
src/lib/gnss/: rtcm.h
src/lib/heatshrink/: Kconfig
src/lib/hrt/: Kconfig
src/lib/log/: CMakeLists.txt  Kconfig
src/lib/mathlib/: Kconfig
src/lib/matrix/: Kconfig
src/lib/mavlink_log/: CMakeLists.txt  Kconfig  mavlink_log.cpp
src/lib/modes/: standard_modes.hpp  ui.hpp
src/lib/parameters/: CMakeLists.txt  ConstLayer.h  DynamicSparseLayer.h  ExhaustiveLayer.h  Kconfig  ParamLayer.h  StaticSparseLayer.h  atomic_transaction.h  autosave.cpp  autosave.h  param.h  param_translation.h  param_translation_stub.cpp  parameters.cpp  px_generate_params.py
src/lib/perf/: Kconfig
src/lib/ringbuffer/: Kconfig
src/lib/sd_bench/: CMakeLists.txt  Kconfig  sd_bench.cpp
src/lib/sensor_calibration/: Magnetometer.hpp
src/lib/timesync/: CMakeLists.txt  Kconfig  Timesync.cpp  Timesync.hpp
src/lib/tinybson/: CMakeLists.txt  Kconfig  tinybson.cpp  tinybson.h
src/lib/tunes/: CMakeLists.txt  Kconfig  tunes.cpp
src/lib/variable_length_ringbuffer/: CMakeLists.txt  Kconfig  VariableLengthRingbuffer.hpp
src/lib/version/: CMakeLists.txt  Kconfig  version.c  version.h
src/middleware/: CMakeLists.txt  Kconfig
src/middleware/uorb/: CMakeLists.txt  Kconfig
src/middleware/uorb/uORB/: CMakeLists.txt  Kconfig  uORBMessageFields.cpp
src/middleware/zbus/: Kconfig
src/modules/: CMakeLists.txt  Kconfig
src/modules/dataman/: CMakeLists.txt  Kconfig  dataman.cpp  dataman.h  parameters.yaml
src/modules/logger/: CMakeLists.txt  Kconfig  log_writer.cpp  log_writer.h  log_writer_file.cpp  log_writer_file.h  log_writer_mavlink.cpp  logged_topics.cpp  logger.cpp  logger.h  logger_task.cpp  logger_task.h  module.yaml  src-include-param-src-lib-parameters-px4-serialized-thunder.md  util.cpp  watchdog.cpp  watchdog.h
src/modules/mavlink_new/: CMakeLists.txt  Kconfig  mavlink_bridge_header.h  mavlink_command_sender.cpp  mavlink_command_sender.h  mavlink_events.h  mavlink_ftp.cpp  mavlink_ftp.h  mavlink_log_handler.cpp  mavlink_log_handler.h  mavlink_main.cpp  mavlink_main.h  mavlink_messages.cpp  mavlink_messages.h  mavlink_mission.cpp  mavlink_mission.h  mavlink_parameters.cpp  mavlink_parameters.h  mavlink_rate_limiter.h  mavlink_receiver.cpp  mavlink_receiver.h  mavlink_shell.cpp  mavlink_shell.h  mavlink_simple_analyzer.cpp  (+8 more)
targets/cm4/: CMakeLists.txt  prj.conf
targets/cm7/: CMakeLists.txt  prj.conf
tools/: setup_env.sh  sync_defconfig.py  validate_json.py
tools/module_config/: generate_params.py
zephyr/: module.yml
(+46 files in other folders)
